Bug 136645 - FILEOPEN: ODT: Incorrect section size
Summary: FILEOPEN: ODT: Incorrect section size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-10 12:23 UTC by Xisco Faulí
Modified: 2020-09-11 09:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (1.28 MB, application/vnd.oasis.opendocument.text)
2020-09-10 12:23 UTC, Xisco Faulí
Details
How it should look like VS How it looks in Libo 7.1 master (524.16 KB, image/png)
2020-09-10 12:24 UTC, Xisco Faulí
Details
Sample 2 (17.98 KB, application/vnd.oasis.opendocument.text)
2020-09-10 12:29 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-09-10 12:23:09 UTC
Created attachment 165361 [details]
sample file

Steps to reproduce:
1. Open attached document -> The document was generated exporting attachment 54957 [details] from bug 44292 to ODT

-> The section on first page has 4.86″ column width. it should be 4.62″. See comparison

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 63d4d3421fec5a4e9e88dcee2992cda38cc7452a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-09-10 12:24:15 UTC
Created attachment 165362 [details]
How it should look like VS How it looks in Libo 7.1 master
Comment 2 Xisco Faulí 2020-09-10 12:25:17 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=36914a8b3a07391d225bce593236d6fcf0cc61d2

author	Noel Grandin <noel.grandin@collabora.co.uk>	2020-08-28 20:21:42 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2020-08-30 08:09:30 +0200
commit 36914a8b3a07391d225bce593236d6fcf0cc61d2 (patch)
tree b16632987a03eabb14d9c697ce3454575e1861ec
parent 977a97f3148c0aece0a54304aae81ec44ced07e0 (diff)
use fastparser in XMLElementPropertyContext subclasses

Bisected with: bibisect-linux64-7.1

Adding Cc: to Noel Grandin
Comment 3 Xisco Faulí 2020-09-10 12:29:58 UTC
Created attachment 165363 [details]
Sample 2
Comment 4 Commit Notification 2020-09-10 15:11:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e7d4a1c87feaad785438fa46f26f0f8f1992faa5

tdf#136645 FILEOPEN: ODT: Incorrect section size

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-09-10 22:46:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed4f610f4a3de12016f8308a17b6ad4f86e9d67a

tdf#136645: sw_odfexport: Add unittest

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-09-11 09:04:47 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 3a22f5a589e822e7ca8bbb00e38a3aff93ed7ba5
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!