tdf#136645 FILEOPEN: ODT: Incorrect section size

regression from
    commit 36914a8b3a07391d225bce593236d6fcf0cc61d2 (patch)
    use fastparser in XMLElementPropertyContext subclasses

Change-Id: I31dc4ce73da88fbd2fbf0f5066c58ac8acfc2731